--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,33 +1,39 @@
 .nav{
     background-color: #72C079;
-    height: 10dvh;
+    width: 100%;
+    height: 12dvh;
     padding: 1dvh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
+    align-content: center;
 }
 
-.logo{
+#logo_img{
     width: 100%;
-    height: 100%;
+    height:10%;
+}
+.logo{
+    width: 10%;
 }
 
-#a_logo{
-    width: 10%;
-    height: 10%;
-}
 #footer{
     background-color: #72C079;
     position: absolute;
-    margin-bottom: 0;
+    bottom: 0;
     width: 100%;
+    text-align: center;
 }
 
 button{
-    width: 200%;
-    height: 71px;
+    width: 100%;
+    height: 70px;
     border-radius: 55.26px;
-    background-color: #8ADF58;
+     background-color: #8ADF58 !important;
     box-shadow: 5.526px 5.526px 4.421px 0px #437E21;
+}
+
+#timeline, #jurassic{
+    width: 20%;
 }
