--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,6 +8,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: center;
+    overflow: hidden;
 }
 
 #logo_img{
@@ -15,25 +16,44 @@
     height:10%;
 }
 .logo{
-    width: 10%;
+    width: 15%;
 }
 
 #footer{
     background-color: #72C079;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     text-align: center;
 }
 
-button{
+.btn{
     width: 100%;
     height: 70px;
     border-radius: 55.26px;
-     background-color: #8ADF58 !important;
+    background-color: #8ADF58 !important;
     box-shadow: 5.526px 5.526px 4.421px 0px #437E21;
+    border: none;
+    cursor: pointer;
+
+    text-align: center;
+    font-size: 33px !important;
+    font-style: normal;
+    font-weight: 600 !important;
+    line-height: normal;
+    transition-duration: 0.5s;
 }
+.btn:hover .btn:focus{
+    background-color: #9c72c0 !important;
+}  
 
 #timeline, #jurassic{
     width: 20%;
+}
+#clock{
+    text-align: center;
+    font-size: 33px !important;
+    font-style: normal;
+    font-weight: 600 !important;
+    line-height: normal;
 }
