--- a/styles/jurassic.css
+++ b/styles/jurassic.css
@@ -18,85 +18,85 @@ main {
 
 .box {
     position: relative;
-    width: 100vw;
-    height: 69.9vh;
+    width: 1769px;
+    height: 699px;
   }
   
   .box .group {
     position: fixed;
-    width: 100vw;
-    height: 69.9vh;
+    width: 1773px;
+    height: 699px;
   }
   
   .box .rectangle {
     position: absolute;
-    width: 66.6vw;
-    height: 69.8vh;
+    width: 1126px;
+    height: 698px;
     background-color: #000000;
   }
   
   .box .overlap {
-    top: 0.2vh;
+    top: 3px;
     background-color: #72c079;
     position: absolute;
-    width: 31.7vw;
-    height: 21.1vh;
-    left: 72.5vw;
+    width: 544px;
+    height: 317px;
+    left: 1225px;
     box-shadow: 0px 4px 4px #00000040;
   }
   
   .box .image {
-    left: 1vw;
+    left: 17px;
     position: absolute;
-    width: 12.3vw;
-    height: 19.1vh;
-    top: 1vh;
+    width: 207px;
+    height: 287px;
+    top: 15px;
     object-fit: cover;
   }
   
   .box .text-wrapper {
     position: absolute;
-    width: 18.3vw;
-    top: 1vh;
-    left: 15.8vw;
+    width: 284px;
+    top: 14px;
+    left: 247px;
     font-family: "Inter", Helvetica;
     font-weight: 400;
     color: #000000;
-    font-size: 2.4vw;
+    font-size: 24px;
     text-align: center;
     letter-spacing: 0;
     line-height: normal;
   }
   
   .box .overlap-group {
-    top: 54.7vh;
+    top: 382px;
     background-color: #daa658;
     box-shadow: 0px 4px 4px #00000040;
     position: absolute;
-    width: 31.7vw;
-    height: 21.1vh;
-    left: 72.5vw;
+    width: 544px;
+    height: 317px;
+    left: 1225px;
   }
   
   .box .k-k-egy-genetikailag {
     position: absolute;
-    width: 18.3vw;
-    top: 1vh;
-    left: 15.8vw;
+    width: 284px;
+    top: 14px;
+    left: 242px;
     font-family: "Inter", Helvetica;
     font-weight: 400;
     color: #000000;
-    font-size: 2.4vw;
+    font-size: 24px;
     text-align: center;
     letter-spacing: 0;
     line-height: normal;
   }
   
   .box .img {
-    left: 1.1vw;
+    left: 18px;
     position: absolute;
-    width: 12.3vw;
-    height: 19.1vh;
-    top: 1vh;
+    width: 207px;
+    height: 287px;
+    top: 15px;
     object-fit: cover;
   }
