--- a/styles/nav.css
+++ b/styles/nav.css
@@ -65,49 +65,44 @@
         display: none;
     }
     .nav{
+      display: flex;
         justify-content: center;
         flex-wrap: nowrap;
+        /* overflow: hidden; */
+        position: relative;
     }
+    #logo_img{
+      width: 200%;
+      height:200%;
+  }
+  .logo{
+      width: 40%;
+  }
     #myLinks{
         display: block;
     }
-    .mobile-container {
-        max-width: 480px;
-        margin: auto;
-        background-color: #555;
-        height: 500px;
-        color: white;
-        border-radius: 10px;
-      }
-      
-      .topnav {
-        overflow: hidden;
-        background-color: #333;
-        position: relative;
-      }
-      
-      .topnav #myLinks {
+
+      #myLinks {
         display: none;
       }
       
-      .topnav a {
-        color: white;
+      a {
+        color: rgb(0, 0, 0);
         padding: 14px 16px;
         text-decoration: none;
         font-size: 17px;
         display: block;
       }
       
-      .topnav a.icon {
-        background: black;
+      a.icon {
+        background: rgb(50, 248, 0);
         display: block;
         position: absolute;
         right: 0;
-        top: 0;
       }
       
-      .topnav a:hover {
-        background-color: #ddd;
+       a:hover {
+        background-color: #dfc458;
         color: black;
       }
       
