--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,15 +8,17 @@
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: center;
-    overflow: hidden;
 }
 
 #logo_img{
     width: 100%;
-    height:10%;
+    height: 100%;
+    object-fit: contain;
 }
 .logo{
-    width: 15%;
+    width: 15%; 
+    height: 100%;
+    overflow-y: hidden;
 }
 
 #footer{
@@ -56,7 +58,7 @@
     font-weight: 600 !important;
     line-height: normal;
 }
-#myLinks{
+.dropdown-content{
     display: none;
 }
 
@@ -71,43 +73,64 @@
         /* overflow: hidden; */
         position: relative;
     }
-    #logo_img{
-      width: 200%;
-      height:200%;
-  }
-  .logo{
-      width: 40%;
-  }
-    #myLinks{
-        display: block;
-    }
 
-      #myLinks {
-        display: none;
-      }
-      
-      a {
-        color: rgb(0, 0, 0);
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-      }
-      
-      a.icon {
-        background: rgb(50, 248, 0);
-        display: block;
-        position: absolute;
-        right: 0;
-      }
-      
-       a:hover {
-        background-color: #dfc458;
-        color: black;
-      }
-      
-      .active {
-        background-color: #04AA6D;
-        color: white;
-      }
+    .logo {
+      width: auto;
+      height: 100%;
+      overflow-y: hidden;
+  }
+
+  .container {
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    right: 0;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 10000000000;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .slhow {display: block;}
+
+  #clock{
+    margin-right: 5%;
+  }
 }
